# vibe-coding-seminar

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy.yml  inspect-server.yml
folien/: 2. Sitzung.pptx  3. Sitzung.pptx
musikanalyse/Graupner/: Graupner-Saetze_berechnet.CSV  README.md  graupner_analysis.py  requirements.txt
musikanalyse/depoly/: In monte oliveti.mscz  README.md  depoly.py  projekt.md
musikanalyse/graupner/: GRAUPNER_ANALYSE_ZUSAMMENFASSUNG.md  Graupner GWV online.xlsx  Graupner GWV online_bickel.xlsx  Graupner-Besetzung-expanded.csv  Graupner-Saetze_berechnet.CSV  Graupner-Saetze_strukturiert.csv  Graupner-Skript3.py  README.md  besetzung_expander.py  debug_missing_works.py  graupner_analysis.py  graupner_process_and_analyze.py  graupner_xlsx_extractor.py  inspect_xlsx.py  projekt.md
musikanalyse/music-analyzer/: 2026-04-23-145239-this-session-is-being-continued-from-a-previous-c.txt  CLAUDE.md  README.md  index.html  package-lock.json  package.json  projekt.md  vite.config.ts
musikanalyse/songtext-analyse/: README.md  app.js  cloudflare-worker.js  index.html  manifest.webmanifest  sw.js  (+2 more)
musikgeschichte/: burney-musical-tours.html
praxis/wub-wub/: CMakeLists.txt  PRESENTATION.md  README.md  build.sh  presentation.html  projekt.md
praxis/wub-wub/Resources/: ui.html
praxis/wub-wub/Source/: EnvelopeGenerator.cpp  EnvelopeGenerator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
praxis/wub-wub/website/: index.html
tools/: build-site.mjs  vorlage-projekt.md
wissenschaft/: schubert-fun-facts.html
(+143 files in other folders)
